@@ -32,8 +32,8 @@ installed system, and running the NetBSD test suite.
 .Pp
 The NetBSD ports currently supported as targets (i.e., as the
 system to install and run under emulation) are i386, amd64,
-sparc, sparc64, evbarm-earmv7hf (using the VEXPRESS_A15 kernel),
-evbarm-aarch64, pmax, hpcmips, and vax.
+sparc, sparc64, evbarm-earmv7hf (using the qemu vexpress-a15
+system emulation), evbarm-aarch64, pmax, hpcmips, and vax.
 The host (the system running
 .Nm )
 can be any NetBSD port or even a different Unix-like system such
