@@ -1,4 +1,7 @@
 
+Deal with the removal of the VEXPRESS_A15 kernel, used by the
+evbarm-earmv7hf target, in favor of GENERIC.
+
 - 1.46 released -
 
 Add support for NetBSD/evbarm-aarch64 targets.
